[package]
name = "tbm"
description = "a Terminal Blueprint Meddler, for inspecting eBPF programs"
authors = ["Rafael Ortiz <rafael@ortiz.sh>"]
version = "0.1.1"
edition = "2021"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/RafaelOrtizRC/tbm"
repository = "https://github.com/RafaelOrtizRC/tbm"
keywords = ["ebpf", "tui", "elf", "linux"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.24.0"
tui = { version = "0.18.0", default-features = false, features = ['crossterm'] }
clap = { version = "3.2.11", features = ["derive"] }
oxidebpf = "0.2.4"
